Input fields added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     </style>
 </head>
 <body>
-    <h2>Heads or Tails?</h2>
+    <form>
+        <h2>Heads or Tails?</h2>
+        <input type="button" value="Flip" onclick="ans.value=flipOut();"/>
+        <input type="text" name="ans" size="5" onchange=""/>
+    </form>
 </body>
