--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
     </script>
     <style>
-
+        body {background-color: #ccffcc; color: green; font-family: verdana; text-align: center;}
     </style>
 </head>
 <body>
